Устранение ошибок по замечаниям