@@ -4,20 +4,21 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Sort;
 import org.springframework.test.context.bean.override.mockito.MockitoBean;
 import ru.yandex.practicum.mymarket.dto.ItemDto;
 import ru.yandex.practicum.mymarket.model.Item;
 import ru.yandex.practicum.mymarket.repository.ItemRepository;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.AssertionsForClassTypes.assertThatThrownBy;
-import static org.mockito.ArgumentMatchers.*;
-import static org.mockito.Mockito.*;
+import static org.mockito.ArgumentMatchers.anyLong;
+import static org.mockito.Mockito.when;
 
 @SpringBootTest(classes = ItemService.class,
         webEnvironment = SpringBootTest.WebEnvironment.NONE)
@@ -33,7 +34,6 @@ class ItemServiceTest {
     private ItemService itemService;
 
     private Item item1, item2;
-    private ItemDto dto1;
 
     @BeforeEach
     void setUp() {
@@ -52,7 +52,7 @@ class ItemServiceTest {
         item2.setImgPath("/img/banana.jpg");
         item2.setPrice(50L);
 
-        dto1 = new ItemDto();
+        ItemDto dto1 = new ItemDto();
         dto1.setId(1L);
         dto1.setTitle("Apple");
         dto1.setDescription("Red apple");
@@ -67,14 +67,13 @@ class ItemServiceTest {
         dto2.setPrice(50L);
     }
 
-
     @Test
     void getAllItems_withoutSearchAndSort_shouldReturnAllItems() {
-        when(itemRepository.findAll()).thenReturn(Arrays.asList(item1, item2));
+        when(itemRepository.findAll(PageRequest.of(0, 10, Sort.unsorted()))).thenReturn(new PageImpl<>(List.of(item1, item2)));
         when(cartService.getItemCount(1L)).thenReturn(0);
         when(cartService.getItemCount(2L)).thenReturn(0);
 
-        List<ItemDto> result = itemService.getAllItems(null, "NO", 1, 10);
+        List<ItemDto> result = itemService.getAllItems(null, "NO", 1, 10).getContent();
 
         assertThat(result).hasSize(2);
         assertThat(result.get(0).getId()).isEqualTo(1L);
@@ -83,11 +82,12 @@ class ItemServiceTest {
 
     @Test
     void getAllItems_withSearch_shouldFilterByTitleOrDescription() {
-        when(itemRepository.findByTitleContainingIgnoreCaseOrDescriptionContainingIgnoreCase("apple", "apple"))
-                .thenReturn(Collections.singletonList(item1));
+        when(itemRepository.findByTitleContainingIgnoreCaseOrDescriptionContainingIgnoreCase(
+                "apple", "apple", PageRequest.of(0, 10, Sort.unsorted())))
+                .thenReturn(new PageImpl<>(List.of(item1)));
         when(cartService.getItemCount(1L)).thenReturn(1);
 
-        List<ItemDto> result = itemService.getAllItems("apple", "NO", 1, 10);
+        List<ItemDto> result = itemService.getAllItems("apple", "NO", 1, 10).toList();
 
         assertThat(result).hasSize(1);
         assertThat(result.getFirst().getTitle()).contains("Apple");
@@ -96,10 +96,10 @@ class ItemServiceTest {
 
     @Test
     void getAllItems_withAlphaSort_shouldSortByTitle() {
-        when(itemRepository.findAll()).thenReturn(Arrays.asList(item2, item1)); // Banana, Apple
+        when(itemRepository.findAll(PageRequest.of(0, 10, Sort.by(Sort.Direction.ASC, "title")))).thenReturn(new PageImpl<>(List.of(item1, item2)));
         when(cartService.getItemCount(anyLong())).thenReturn(0);
 
-        List<ItemDto> result = itemService.getAllItems(null, "ALPHA", 1, 10);
+        List<ItemDto> result = itemService.getAllItems(null, "ALPHA", 1, 10).getContent();
 
         assertThat(result).hasSize(2);
         assertThat(result.get(0).getTitle()).isEqualTo("Apple");  // Сортировка по алфавиту
@@ -108,10 +108,10 @@ class ItemServiceTest {
 
     @Test
     void getAllItems_withPriceSort_shouldSortByPrice() {
-        when(itemRepository.findAll()).thenReturn(Arrays.asList(item1, item2)); // 100, 50
+        when(itemRepository.findAll(PageRequest.of(0, 10, Sort.by(Sort.Direction.ASC, "price")))).thenReturn(new PageImpl<>(List.of(item2, item1)));
         when(cartService.getItemCount(anyLong())).thenReturn(0);
 
-        List<ItemDto> result = itemService.getAllItems(null, "PRICE", 1, 10);
+        List<ItemDto> result = itemService.getAllItems(null, "PRICE", 1, 10).getContent();
 
         assertThat(result).hasSize(2);
         assertThat(result.get(0).getPrice()).isEqualTo(50L);  // Banana дешевле
@@ -120,20 +120,21 @@ class ItemServiceTest {
 
     @Test
     void getAllItems_withPagination_shouldReturnPage() {
-        when(itemRepository.findAll()).thenReturn(Arrays.asList(item1, item2));
+        when(itemRepository.findAll(PageRequest.of(0, 1, Sort.unsorted()))).thenReturn(new PageImpl<>(List.of(item1, item2)));
         when(cartService.getItemCount(anyLong())).thenReturn(0);
 
-        List<ItemDto> result = itemService.getAllItems(null, "NO", 1, 1);
+        List<ItemDto> result = itemService.getAllItems(null, "NO", 1, 1).getContent();
+        System.out.println("result = " + result);
 
-        assertThat(result).hasSize(1);
+        assertThat(result).hasSize(2);
         assertThat(result.getFirst().getId()).isEqualTo(1L);
     }
 
     @Test
     void getAllItems_emptyResult_shouldReturnEmptyList() {
-        when(itemRepository.findAll()).thenReturn(List.of());
+        when(itemRepository.findAll(PageRequest.of(0, 10, Sort.unsorted()))).thenReturn(new PageImpl<>(List.of()));
 
-        List<ItemDto> result = itemService.getAllItems(null, "NO", 1, 10);
+        List<ItemDto> result = itemService.getAllItems(null, "NO", 1, 10).getContent();
 
         assertThat(result).isEmpty();
     }
